--- a/style.css
+++ b/style.css
@@ -1,21 +1,21 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap');
 
 :root{
-	--main-background: #0b0c0f;
+	--main-background: #262f49;
 	--main-fonts-color: #fff;
-	--main-decor-color:#00a9e2;
-    --main-header-background:#21252e;
+	--main-decor-color:#298cad;
+    --main-header-background:#000000;
 	--main-font-family: 'Poppins', sans-serif;
 }
 
 *{
-	margin: 0;
-	padding: 0;
+	margin: 1;
+	padding: 1;
 	scroll-behavior: smooth;
 }
 
 main{
-	padding: 0;
+	padding: 1;
 	width: 100%;
 	height: 100%;
 	background: var(--main-background);
@@ -56,6 +56,7 @@ header:hover{
 .nav-bar{
 	list-style:none;
 	position: relative;
+	align-items: center;
 	display: inline-flex;
 }
 
@@ -178,7 +179,7 @@ a.nav-link{
 }
 #projects p{
 	font-family: var(--main-font-family);
-	font-size:1.2rem;
+	font-size:1.0rem;
 	padding: 10px;
 }
 
@@ -210,7 +211,7 @@ a.nav-link{
 .card .work-content{
 	text-align: center;
 	padding: 10px 5px;
-	font-size: 1rem;
+	font-size: 14px;
 	color: var(--main-fonts-color);
 	font-family: var(--main-font-family);
 	cursor: pointer;
