--- a/style.css
+++ b/style.css
@@ -1,16 +1,16 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap');
 
 :root{
-	--main-background: #262f49;
-	--main-fonts-color: #fff;
+	--main-background: #253461;
+	--main-fonts-color: rgb(255, 255, 255);
 	--main-decor-color:#298cad;
     --main-header-background:#000000;
 	--main-font-family: 'Poppins', sans-serif;
 }
 
 *{
-	margin: 1;
-	padding: 1;
+	margin: 0;
+	padding: 3;
 	scroll-behavior: smooth;
 }
 
@@ -26,7 +26,7 @@ main{
 ──────────────────*/
 
 header{
-	margin: 0 auto;
+	margin: 2 auto;
 	width: 100%;
 	height: 70px;
 	display: flex;
@@ -48,26 +48,30 @@ header:hover{
 }
 
 .logo img{
-	padding-top: 5px;
-	height: 50px;
+	padding-top: 2px;
+	height: 10px;
 	cursor: pointer;
 }
 
 .nav-bar{
 	list-style:none;
 	position: relative;
-	align-items: center;
+	align-items: flex-start;
 	display: inline-flex;
 }
 
 a.nav-link{
-	margin: 2px;
-	padding: 5px 10px;
+	margin: 1px;
+	padding: 15px 10px;
 	text-decoration: none;
 	color: var(--main-fonts-color);
 	font-family: var(--main-font-family);
 	cursor: pointer;
 	text-transform: uppercase;
+}
+
+a.nav-link-logo{
+	padding: 30px 10px;
 }
 
 .active{
