Improving all features

--- a/style.css
+++ b/style.css
@@ -453,3 +453,25 @@ button
 .nav-active{
 	transform:translatex(0%);
 }
+
+.program-languages{
+    color: rgb(253,253,254);
+    text-decoration: none;
+    font-family: 'Times New Roman', Times, serif;
+    font-weight: 700;
+    font-size: 60px !important;
+    padding: 10px;
+	display: flex;
+    background: rgb(39,40,34);
+	position: center;
+    align-items: space-around;
+	justify-content:center;
+}
+.program-message{
+    color: rgb(253,253,254);
+    text-align: center;
+    display: flex;
+    margin-left: 20px;
+    margin-top: 80px;
+    margin-bottom: 40px;
+}
