arrumando tabela periódica

--- a/style.css
+++ b/style.css
@@ -89,7 +89,7 @@ a.nav-link-logo{
 
 #home{ 	
 	margin: auto;
-	height: 120vh; //altura do nome em relação ao início da página
+	height: 120vh; 
 	color: var(--main-fonts-color);
 	display: flex;
 	flex-direction: column;
@@ -384,9 +384,9 @@ button
 	font-family: 'Times New Roman', Times, serif;
 	border: 10;
 	padding: 10;
-	//width: 100%;
-	//height: 100%;
-    //background-color: var(--main-header-background);
+	/* width: 100%;
+	// height: 100%;
+    // background-color: var(--main-header-background);*/
 }
 
 
@@ -494,3 +494,5 @@ button
     border-radius: 15px;
     padding: 5px;
 }
+
+
